1998-08-18  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: make it require libgtop >= 0.25.0.
	Added (AC_SUBST): `LIBGTOP_MICRO_VERSION' and `LIBGTOP_EXTRA_LIBS'.
	
1998-08-17  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Completely rewrote this file. It
	uses now the `libgtop-config' script and also checks for
	correct libgtop version.

1998-08-06  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Added `freebsd' directory.

1998-08-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-x-checks.m4: Define USE_DEVGTK unconditionally to `true'.

1998-08-04  Stuart Parmenter  <pavlov@innerx.net>

	* gnome-x-checks.m4: (AM_PATH_GTK) make it require GTK >= 1.1.1
	dnl'd the dev_gtk since they will have to anyways.

1998-08-04  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gnome.m4: (GNOME_INIT_HOOK): Call $1 also, if `gnome-config' is
	found and used

1998-08-02  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome.m4 (GNOME_CONFIG): Use the `gnome-config' program if it
	exists. 

1998-08-01  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (EXTRA_DIST): Remove `macros.dep'.

1998-07-30  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_LIBGTOP_TYPES): New macro.
	Checks for `u_int64_t' and `int64_t'.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Added (AC_SUBST):
	`LIBGTOP_NAMES_LIBS', `LIBGTOP_NAMES_INCS',
	`LIBGTOP_GUILE_LIBS', `LIBGTOP_GUILE_NAMES_LIBS',
	`LIBGTOP_MAJOR_VERSION', `LIBGTOP_MINOR_VERSION',
	`LIBGTOP_VERSION'.

	* gnome-libgtop-sysdeps.m4 (libgtop_sysdeps_dir):
	Added `AC_SUBST(libgtop_sysdeps_dir)'.

1998-07-29  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Check for functions that `error.c' looks for.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* gnome-fileutils.m4 (AM_FUNC_ERROR_AT_LINE): Removed.

	* gnome-support.m4 (AM_FUNC_ERROR_AT_LINE): New check.
