@@ -1,6 +1,7 @@
 ## Please update this variable if any new macros are created
 MACROS=						\
   aclocal-include.m4				\
+  compiler-flags.m4				\
   curses.m4					\
   gnome-fileutils.m4				\
   gnome-guile-checks.m4				\
